Dark mode fixes

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1,6 +1,7 @@
 body {
     font-size:15px;
 	color: #f5f5f5;
+	background-color: #333;
 }
 
 @font-face {
@@ -580,7 +581,7 @@ hr.shaded {
     height: 12px;
     border: 0;
     margin-top: 70px;
-    background: #131313;
+    background: #333;
     width: 100%;
     margin-bottom: 10px;
 }
